# f1tenth_obstacle_avoid

./: README.md  package.xml  setup.cfg  setup.py
config/: amcl.yaml  amcl_config.yaml  ftg.yaml
f1tenth_obstacle_avoid/: aeb_node.py  ftg_node.py  scan_preproc_node.py
launch/: avoid.launch.py
